# wireform

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  publish-testpypi.yml  tests.yml
custom_json/: __init__.py  _alias.py  custom_dumps.py  json_dumper.py  read_json_file_by_path.py  repr_in_dumps.py
src/custom_json/: __init__.py  _alias.py  custom_dumps.py  json_dumper.py  read_json_file_by_path.py
src/wireform/: custom_dumps.py
tests/: __init__.py  test_custom_dumps.py  test_read_json_file_by_path.py
