[project]
name = "custom-json"
version = "1.0.0"
description = "Drop-in JSON encoder for dataclasses, datetimes, Decimal, bytes, sets, exceptions, and custom repr"
authors = [
    {name = "Miriada", email = "info@miriada.io"}
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typeful>=1.0.0",
]
keywords = ["json", "encoder", "dumps", "dataclass", "datetime", "decimal", "serialization"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "coverage>=7.0",
    "ruff>=0.6",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/miriada-io/custom-json"
Repository = "https://github.com/miriada-io/custom-json"
Issues = "https://github.com/miriada-io/custom-json/issues"
Changelog = "https://github.com/miriada-io/custom-json/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/custom_json"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",  # line too long — long comments/strings are ok
    "B008",  # function calls in argument defaults — used for typing helpers
]

[tool.ruff.lint.per-file-ignores]
# __init__.py files intentionally keep unused names for re-export
"**/__init__.py" = ["F401", "F403"]
